// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ImageHeader correctly 1`] = `
<div
  className="card__header--image"
>
  <img
    alt="Alt text for the image"
    src="http://via.placeholder.com/350x200"
  />
</div>
`;

exports[`renders ImageHeader correctly with className and extra styles 1`] = `
<div
  className="card__header--image image-wrapper"
  style={
    Object {
      "padding": "3px",
    }
  }
>
  <img
    alt="Alt text for the image"
    src="http://via.placeholder.com/350x200"
  />
</div>
`;
